@@ -1,3 +1,8 @@
+2010-04-27  Marcus Brinkmann  <marcus@g10code.de>
+
+	* rndw32ce.c (fillup_buffer): Rewrite without using nested
+	functions, which are broken on arm/cegcc.
+
 2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)
 
 	Spelling fixes.
